<resources>
    <string name="app_name">Semestral</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ti_idUser">Usuario</string>
    <string name="ti_passwd">Contraseña</string>
    <string name="ti_Nombre">Nombre</string>
    <string name="ti_Apellido">Apellido</string>
    <string name="ti_Cedula">Cédula</string>
    <string name="ti_Tel1">Teléfono 1</string>
    <string name="ti_Tel2">Teléfono 2</string>
    <string name="ti_Email">Correo Electrónico</string>
    <string name="ti_Padre_N">Nombre del Padre</string>
    <string name="ti_Padre_A">Apellido del Padre</string>
    <string name="bt_Registro">Registrar</string>
    <string name="bt_Borrar">Eliminar</string>
    <string name="bt_Modificar">Modificar</string>
    <string name="tvSelec">Acción</string>
    <string name="ti_Duracion">Duración</string>
    <string name="bt_Actualizar">Actualizar</string>
    <string name="bt_Limpiar">Limpiar</string>
    <string name="username2">Usuario Normal</string>
    <string name="username3">Admin</string>
    <string name="Informes">Informes</string>
    <string name="ti_Residencia">Residencia</string>
    <string name="ti_Trabajo">Lugar de Trabajo</string>
    <string name="ti_Marca">Marca</string>
    <string name="ti_Modelo">Modelo</string>
    <string name="ti_Precio">Precio</string>
    <string name="ti_FechaCompra">Fecha de Compra</string>
    <string name="ti_IDProm">ID</string>
    <string name="ti_Titulo">Título</string>
    <string name="ti_UbicacionI">Ubicación Inicial</string>
    <string name="ti_UbicacionF">Ubicación Final</string>
    <string name="ti_Fecha">Fecha</string>
    <string name="ti_Esp">Español</string>
    <string name="ti_Ing">Inlgés</string>
    <string name="ti_Idioma">Idioma</string>
    <string name="ti_Correo">Correo</string>
    <string name="Servicios">Servicios</string>
    <string name="Promociones">Promociones</string>
    <string name="ti_Madre_N">j</string>
    <string name="ti_Madre_A">k</string>
    <string name="ti_Colegio">p</string>
    <string name="tvCarrera">5</string>
    <string name="bt_Buscar">m</string>
    <string name="tvTitleR">7</string>
    <string name="bt_Transferencia">4</string>
    <string name="ti_NombreUniversidad">2</string>
    <string name="ti_CarreraAnterior">23</string>
    <string name="ti_NivelAnterior">6</string>
    <string name="Seeguimiento">o</string>
    <string name="Informe_Carreras">[</string>
    <string name="Informe_ProspUR">s</string>
    <string name="Informe_Estudiantes">0</string>
    <string name="Informe_PrimeroIngreso">s</string>
    <string name="Informe_Prosp5">1</string>
    <string name="Informe_Prosp6">3</string>
    <string name="Informe_ProspUT">3</string>
    <string name="tvTitle">4</string>
    <string name="bt_Reingreso">4</string>
    <string name="username">Cosmos</string>
    <string name="Activos">Activos</string>
    <string name="Info">Acerca de</string>
    <string name="Blanco" />
</resources>
